--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 Classwork
+<script>
+    console.log ("Hello World");
+    nameVariable = ("Chelsea");
+    console.log ("Hello " + nameVariable);
+    nameVariable1 = 12;
+    console.log ("Your dog is " + nameVariable1);
+    console.log (1+ "+" + 1 + "=" + (1+1));
+</script>
 </body>
 </html>
